{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 59,
  "lineage": "bab05c4b-fdfb-4542-ab28-791167bd06d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0934cc0a29207e734",
            "domain": "vpc",
            "id": "eipalloc-0594f55a35676679b",
            "instance": "i-03a65586828707e22",
            "network_interface": "eni-049178ebb99f14168",
            "private_dns": "ip-192-168-1-142.eu-west-1.compute.internal",
            "private_ip": "192.168.1.142",
            "public_dns": "ec2-54-77-23-8.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.77.23.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http-instance-http-1"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.http",
            "aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00c2c94d58bddd62a",
            "domain": "vpc",
            "id": "eipalloc-03c1244d6afacd2e6",
            "instance": "i-0bfdcb76456d598ec",
            "network_interface": "eni-00cf2ddfb8c1cb853",
            "private_dns": "ip-192-168-1-172.eu-west-1.compute.internal",
            "private_ip": "192.168.1.172",
            "public_dns": "ec2-52-49-6-88.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.6.88",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http-instance-http-2"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.http",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "instance-db-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-0ffd20a19f303d9af",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ffd20a19f303d9af",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-078249a7ce7d1b4f6",
            "private_dns": "ip-192-168-2-113.eu-west-1.compute.internal",
            "private_ip": "192.168.2.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f10e514ee421abfc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0562c5ee28e8dde88",
            "tags": {
              "Name": "instance-db-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-009879231267f3eb5",
              "sg-0e720ef89cc3ec45e"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.db",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "instance-db-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-02d937f3180170583",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-02d937f3180170583",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba7b8ee61a721571",
            "private_dns": "ip-192-168-2-170.eu-west-1.compute.internal",
            "private_ip": "192.168.2.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-038a463aee7860229",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0562c5ee28e8dde88",
            "tags": {
              "Name": "instance-db-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-009879231267f3eb5",
              "sg-0e720ef89cc3ec45e"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.db",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "instance-db-3",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-09cb772b5aa1d1307",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09cb772b5aa1d1307",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0616eb83d2745872b",
            "private_dns": "ip-192-168-2-43.eu-west-1.compute.internal",
            "private_ip": "192.168.2.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a39933e960e61fc9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0562c5ee28e8dde88",
            "tags": {
              "Name": "instance-db-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-009879231267f3eb5",
              "sg-0e720ef89cc3ec45e"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.db",
            "aws_subnet.db",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "instance-http-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-03a65586828707e22",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03a65586828707e22",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-049178ebb99f14168",
            "private_dns": "ip-192-168-1-142.eu-west-1.compute.internal",
            "private_ip": "192.168.1.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01f01ede4087e5dc6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048bbead10ff929c9",
            "tags": {
              "Name": "instance-http-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-009879231267f3eb5",
              "sg-02d1041a743e90e48"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "instance-http-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005af4c3162f495fa",
            "arn": "arn:aws:ec2:eu-west-1:153726843398:instance/i-0bfdcb76456d598ec",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0bfdcb76456d598ec",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-00cf2ddfb8c1cb853",
            "private_dns": "ip-192-168-1-172.eu-west-1.compute.internal",
            "private_ip": "192.168.1.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b63321ed0881c265",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048bbead10ff929c9",
            "tags": {
              "Name": "instance-http-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-009879231267f3eb5",
              "sg-02d1041a743e90e48"
            ]
          },
          "depends_on": [
            "aws_key_pair.user_key",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bee56267e19de754",
            "owner_id": "153726843398",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-047d55a8b97cf16d2"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bbca3d8135f187d1",
            "owner_id": "153726843398",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bee56267e19de754",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-047d55a8b97cf16d2"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f19aa7cb33a05c8",
            "route_table_id": "rtb-0bbca3d8135f187d1",
            "subnet_id": "subnet-0562c5ee28e8dde88"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045477786c6551afc",
            "route_table_id": "rtb-0bbca3d8135f187d1",
            "subnet_id": "subnet-048bbead10ff929c9"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.http"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-009879231267f3eb5",
            "description": "Allow default administration service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-009879231267f3eb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-047d55a8b97cf16d2"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-0e720ef89cc3ec45e",
            "description": "Allow db incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e720ef89cc3ec45e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-047d55a8b97cf16d2"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:security-group/sg-02d1041a743e90e48",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d1041a743e90e48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": null,
            "owner_id": "153726843398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-047d55a8b97cf16d2"
          },
          "depends_on": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:subnet/subnet-0562c5ee28e8dde88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0562c5ee28e8dde88",
            "map_public_ip_on_launch": false,
            "owner_id": "153726843398",
            "tags": {
              "Name": "subnet-db"
            },
            "vpc_id": "vpc-047d55a8b97cf16d2"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:subnet/subnet-048bbead10ff929c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-048bbead10ff929c9",
            "map_public_ip_on_launch": false,
            "owner_id": "153726843398",
            "tags": {
              "Name": "subnet-http"
            },
            "vpc_id": "vpc-047d55a8b97cf16d2"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:153726843398:vpc/vpc-047d55a8b97cf16d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09ee9ffa3b716fd2e",
            "default_route_table_id": "rtb-05db6ea9518c8d89d",
            "default_security_group_id": "sg-0b16ca167e9100a50",
            "dhcp_options_id": "dopt-dc21bfba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-047d55a8b97cf16d2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05db6ea9518c8d89d",
            "owner_id": "153726843398",
            "tags": {
              "Name": "vpc-http"
            }
          }
        }
      ]
    }
  ]
}